TERRY: test with djimi

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,10 +5,6 @@
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-<<<<<<< HEAD
     <a asp-controller="Profile" asp-action="Profile">Profil</a>
-=======
-    <p>caca</p>
-    <p> Gary</p>
->>>>>>> 945cea71dd5537175de73aa3b434b2fc2d6a2af4
+    <p>Terry test dimitri inshalla</p>
 </div>
