--- a/Views/Profile/Profile.cshtml
+++ b/Views/Profile/Profile.cshtml
@@ -1,7 +1,7 @@
 ﻿@using System.Reflection;
 @model User
 
-<h2>Welcome to your profile page @Model.FirstName @Model.LastName</h2>
+<h2 class="my-5">Welcome to your profile page <span class="font-weight-bold text-uppercase">@Model.FirstName @Model.LastName</span></h2>
 <div class="table-responsive">
     <table class="table table-striped table-hover">
         @{
