DIMITRI: create list of provided services

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,5 +6,6 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
     <a asp-controller="Profile" asp-action="Profile">Profil</a>
+    <a asp-controller="MyServices" asp-action="MyServices">Mes Services</a>
     <p>Terry test dimitri inshalla</p>
 </div>
