TERRY: pull main changes from dimitri

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,8 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome to <span>OfferVerse</span></h1>
     <a asp-controller="Profile" asp-action="Profile">Profil</a>
-    <p>Terry test dimitri inshalla</p>
 </div>
