--- a/Views/Profile/EditProfile.cshtml
+++ b/Views/Profile/EditProfile.cshtml
@@ -1,19 +1,5 @@
 ﻿@model User;
 
-
-@{
-    if (ViewData["message"] != null)
-    {
-        <div class="modal fade bd-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
-            <div class="modal-dialog modal-sm">
-                <div class="modal-content">
-                    @ViewData["message"]
-                </div>
-            </div>
-        </div>        
-    }
-}
-
 <!--
 //TODO: faire une td pour chaque span 
 //TODO: comprendre pq mdp prb
@@ -24,11 +10,13 @@
 <form method="post" asp-action="EditProfile">
     <table class="table table-striped table-bordered table-hover">
         <tr>
-            <th>
+            <th class="w-25">
                 <label asp-for="FirstName"></label>
             </th>
             <td>
-                <input asp-for="FirstName"/>
+                <input asp-for="FirstName" class="form-control"/>
+            </td>
+            <td class="w-50">
                 <span asp-validation-for="FirstName" class="text-danger px-2"></span>
             </td>
         </tr>
@@ -38,7 +26,9 @@
                 <label asp-for="LastName"></label>
             </th>
             <td>
-                <input asp-for="LastName" />
+                <input asp-for="LastName" class="form-control" />
+            </td>
+            <td>
                 <span asp-validation-for="LastName" class="text-danger px-2"></span>
             </td>
         </tr>
@@ -48,7 +38,9 @@
                 <label asp-for="PhoneNumber"></label>
             </th>
             <td>
-                <input asp-for="PhoneNumber" />
+                <input asp-for="PhoneNumber" class="form-control" />
+            </td>
+            <td>
                 <span asp-validation-for="PhoneNumber" class="text-danger px-2"></span>
             </td>
         </tr>
@@ -58,7 +50,9 @@
                 <label asp-for="PhoneNumber"></label>
             </th>
             <td>
-                <input asp-for="PhoneNumber" />
+                <input asp-for="PhoneNumber" class="form-control" />
+            </td>
+            <td>
                 <span asp-validation-for="PhoneNumber" class="text-danger px-2"></span>
             </td>
         </tr>
@@ -68,7 +62,9 @@
                 <label asp-for="StreetNumber"></label>
             </th>
             <td>
-                <input asp-for="StreetNumber" />
+                <input asp-for="StreetNumber" class="form-control" />
+            </td>
+            <td>
                 <span asp-validation-for="StreetNumber" class="text-danger px-2"></span>
             </td>
         </tr>
@@ -78,7 +74,9 @@
                 <label asp-for="StreetName"></label>
             </th>
             <td>
-                <input asp-for="StreetName" />
+                <input asp-for="StreetName" class="form-control" />
+            </td>
+            <td>
                 <span asp-validation-for="StreetName" class="text-danger px-2"></span>
             </td>
         </tr>
@@ -88,7 +86,9 @@
                 <label asp-for="PostCode"></label>
             </th>
             <td>
-                <input asp-for="PostCode" />
+                <input asp-for="PostCode" class="form-control" />
+            </td>
+            <td>
                 <span asp-validation-for="PostCode" class="text-danger px-2"></span>
             </td>
         </tr>
@@ -98,7 +98,9 @@
                 <label asp-for="City"></label>
             </th>
             <td>
-                <input asp-for="City" />
+                <input asp-for="City" class="form-control" />
+            </td>
+            <td>
                 <span asp-validation-for="City" class="text-danger px-2"></span>
             </td>
         </tr>
@@ -108,8 +110,19 @@
                 <label asp-for="Email"></label>
             </th>
             <td>
-                <input asp-for="Email" />
+                <input asp-for="Email" class="form-control" />
+            </td>
+            <td>
                 <span asp-validation-for="Email" class="text-danger px-2"></span>
+            </td>
+        </tr>
+
+        <tr>
+            <th>
+                <label asp-for="EditPassword"></label>
+            </th>
+            <td>
+                <input asp-for="EditPassword" class="form-check" style="cursor: pointer" />
             </td>
         </tr>
 
@@ -118,7 +131,9 @@
                 <label asp-for="Password"></label>
                 </th>
             <td>
-                <input asp-for="Password"/>
+                <input asp-for="Password" class="form-control" />
+            </td>
+            <td>
                 <span asp-validation-for="Password" class="text-danger px-2"></span>
             </td>
         </tr>
@@ -128,14 +143,19 @@
                 <label asp-for="ConfirmPassword"></label>
             </th>
             <td>
-                <input asp-for="ConfirmPassword" />
+                <input asp-for="ConfirmPassword" class="form-control" />
+            </td>
+            <td>
                 <span asp-validation-for="ConfirmPassword" class="text-danger px-2"></span>
             </td>
         </tr>
 
         <tr>
+            <td>
+                <a asp-controller="Home" asp-action="Index" class="btn btn-dark my-2 p-2 px-4">Back</a>
+            </td>
             <td colspan="2">
-                <input type="submit" value="Validate" class="btn btn-success"/>
+                <input type="submit" value="Validate" class="btn btn-success my-2 p-2 px-4" />
             </td>
         </tr>
     </table>
