--- a/Views/Profile/EditProfile.cshtml
+++ b/Views/Profile/EditProfile.cshtml
@@ -6,7 +6,7 @@
 //TODO: ajouter boolean pour savoir si check mdp ou pas
 //TODO: méthode pour UPDATE info user en db
 -->
-<h2><span class="text-uppercase">@Model.FirstName @Model.LastName</span>, You can now edit your profile</h2>
+<h2 class="my-5"><span class="text-uppercase">@Model.FirstName @Model.LastName</span>, You can now edit your profile</h2>
 <form method="post" asp-action="EditProfile">
     <table class="table table-striped table-bordered table-hover">
         <tr>
@@ -30,18 +30,6 @@
             </td>
             <td>
                 <span asp-validation-for="LastName" class="text-danger px-2"></span>
-            </td>
-        </tr>
-
-        <tr>
-            <th>
-                <label asp-for="PhoneNumber"></label>
-            </th>
-            <td>
-                <input asp-for="PhoneNumber" class="form-control" />
-            </td>
-            <td>
-                <span asp-validation-for="PhoneNumber" class="text-danger px-2"></span>
             </td>
         </tr>
 
@@ -121,12 +109,12 @@
             <th>
                 <label asp-for="EditPassword"></label>
             </th>
-            <td>
+            <td colspan="2">
                 <input asp-for="EditPassword" class="form-check" style="cursor: pointer" />
             </td>
         </tr>
 
-        <tr>
+        <tr id="password">
             <th>
                 <label asp-for="Password"></label>
                 </th>
@@ -138,7 +126,7 @@
             </td>
         </tr>
 
-        <tr>
+        <tr id="confirmation-password">
             <th>
                 <label asp-for="ConfirmPassword"></label>
             </th>
@@ -152,7 +140,7 @@
 
         <tr>
             <td>
-                <a asp-controller="Home" asp-action="Index" class="btn btn-dark my-2 p-2 px-4">Back</a>
+                <a asp-action="ShowProfile" class="btn btn-dark my-2 p-2 px-4">Back</a>
             </td>
             <td colspan="2">
                 <input type="submit" value="Validate" class="btn btn-success my-2 p-2 px-4" />
@@ -160,3 +148,5 @@
         </tr>
     </table>
 </form>
+
+<script src="~/js/EditProfile.js" defer></script>
