--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -17,8 +17,8 @@
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
+                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between d-flex justify-content-between align-items-center">
+                    <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
@@ -26,6 +26,27 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
+                    @if (TempData["timeCredits"] != null)
+                    {
+                        int timeCredits = Convert.ToInt32(TempData["timeCredits"]);
+                        TempData["timeCredits"] = timeCredits; // Reassigns the previous value, because it's destroyed after reading.
+
+                        <ul class="navbar-nav">
+
+                            @if (timeCredits > 0)
+                            {
+                                <li class="nav-item alert alert-success m-0">
+                                    <p class="m-0 text-success fw-bold">+@timeCredits hours</p>
+                                </li>
+                            }
+                            else
+                            {
+                                <li class="nav-item alert alert-danger m-0">
+                                    <p class="m-0 text-danger fw-bold">@timeCredits hours</p>
+                                </li>
+                            }
+                        </ul>
+                    }
                 </div>
             </div>
         </nav>
@@ -45,5 +66,6 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
+    <!--<partial name="_ValidationScriptsPartial" />-->
 </body>
 </html>
