--- a/Views/Profile/ShowInProgressServices.cshtml
+++ b/Views/Profile/ShowInProgressServices.cshtml
@@ -1,7 +1,7 @@
 ﻿@using OfferVerse.ViewModels
 @model UserTransactionsViewModel
 
-<h2 class="my-5"><span>@Model.User.LastName.ToUpper() @Model.User.FirstName[0].ToString().ToUpper()@Model.User.FirstName.Substring(1)</span>, Here are all your time transactions</h2>
+<h2 class="my-5"><span>@Model.User.LastName.ToUpper() @Model.User.FirstName[0].ToString().ToUpper()@Model.User.FirstName.Substring(1)</span>, Here are all your in progress services</h2>
 
 <table class="table  table-bordered table-hover">
     <thead>
@@ -33,7 +33,7 @@
                         <td>@s.ServiceProvided.Description</td>
                         <td>+ @s.NbHours</td>
                     </tr>
-                } 
+                }
                 else
                 {
                     <tr class="alert-danger">
@@ -47,19 +47,9 @@
                         <td>- @s.NbHours</td>
                     </tr>
                 }
-                
+
             }
         }
-        <tr class="alert-success">
-            <th scope="row">@(index++)</th>
-            <td>A</td>
-            <td>welcome</td>
-            <td>gift</td>
-            <td>from</td>
-            <td>our</td>
-            <td>part</td>
-            <td>+ 10</td>
-        </tr>
     </tbody>
 </table>
 
