--- a/Views/Profile/ShowProfile.cshtml
+++ b/Views/Profile/ShowProfile.cshtml
@@ -42,8 +42,9 @@
 </table>
 
 <div class="d-flex gap-xl-5 justify-content-between">
-    <a asp-controller="Home" asp-action="Index" class="btn btn-dark my-2 p-2 px-4 col-3">Back</a>
-    <a asp-action="EditProfile" class="btn btn-warning my-2 p-2 px-4 col-3">Edit profile</a>
-    <a asp-action="ShowCreditsTransactions" class="btn btn-info my-2 p-2 col-3">Check credits transactions</a>   
+    <a asp-controller="Home" asp-action="Index" class="btn btn-dark my-2 p-2 px-4 w-25">Back</a>
+    <a asp-action="EditProfile" class="btn btn-warning my-2 p-2 px-4s w-25">Edit profile</a>
+    <a asp-action="ShowInProgressServices" class="btn btn-secondary my-2 p-2 px-4 w-25">Services in progess</a>
+    <a asp-action="ShowCreditsTransactions" class="btn btn-info my-2 p-2 w-25">Check credits transactions</a>
 </div>
         
