--- a/Views/Profile/ShowProfile.cshtml
+++ b/Views/Profile/ShowProfile.cshtml
@@ -8,7 +8,7 @@
             <h4 class="alert-heading">Well done!</h4>
             <p>Your profile has been successfully edited. You can now see the changes below.</p>
             <hr />
-            <p class="mb-0">If the changes do not appear, please report this to <a href="mailto:administrators@offerverse.com">administrators@offerverse.com</a>.</p>
+            <p class="mb-0">If the changes do not appear, please report it to <a href="mailto:administrators@offerverse.com">administrators@offerverse.com</a>.</p>
         </div>
     }
 }
