--- a/Views/Profile/ReviewService.cshtml
+++ b/Views/Profile/ReviewService.cshtml
@@ -3,7 +3,7 @@
 
 <h2 class="my-5">Leave a review</h2>
 
-<form method="post" asp-action="ReviewService" asp-route-servicePId="@Model.ServiceDemanded.ServiceProvided.ServiceProvidedId"
+<form method="post" asp-action="ReviewService" asp-route-servicePId="@Model.ServiceDemanded.ServiceProvider.MemberId"
                                                asp-route-serviceDId="@Model.ServiceDemanded.ServiceId">
     <table class="table table-striped table-bordered table-hover">
         <tr>
@@ -25,7 +25,7 @@
             <th><label asp-for="@Model.ServiceDemanded.NbHours"></label></th>
             <td class="d-flex align-content-center">
                 <p id="hours" class="my-auto mx-4 fs-3 w-25 text-center">1</p>
-                <input asp-for="@Model.ServiceDemanded.NbHours" type="range" class="form-control" style="cursor: pointer;" id="input-hours" />
+                <input asp-for="@Model.ServiceDemanded.NbHours" type="range" min="1" max="200" class="form-control" style="cursor: pointer;" id="input-hours" />
             </td>
             <td><span asp-validation-for="@Model.ServiceDemanded.NbHours" class="text-danger px-2"></span></td>
         </tr>
