--- a/Views/Profile/ShowInProgressServices.cshtml
+++ b/Views/Profile/ShowInProgressServices.cshtml
@@ -8,7 +8,7 @@
 <p class="fs-5 my-3">or click on <span class="btn btn-danger">Report</span> if there was a problem during the work.</p>
 
 @{
-    string? message = Convert.ToString(ViewData["message"]);
+    string? message = Convert.ToString(TempData["message"]);
     if (!string.IsNullOrEmpty(message))
     {
         switch (message)
@@ -25,7 +25,8 @@
             case "User well reported":
                 <div class="alert alert-success" role="alert">
                     <h4 class="alert-heading">Report successfully created</h4>
-                    <p>We'll keep in touch to let you know about the report! Be patient.</p>
+                    <hr />
+                    <p class="mb-0">We'll keep you informed as your report progresses, so please be patient.</p>
                 </div>
                 break;
 
