--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -16,13 +16,13 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between d-flex justify-content-between align-items-center">
                     <ul class="navbar-nav">
                         <li class="nav-item mx-2">
-                            <a asp-controller="Home" asp-action="Index" class="fs-4 btn btn-primary">OfferVerse</a>
+                            <a asp-controller="Home" asp-action="Index" class="fs-4 btn btn-link">OfferVerse</a>
                         </li>
                         <li class="nav-item mx-2">
-                            <a asp-controller="MyServices" asp-action="MyServices" class="fs-4 btn btn-primary">My services</a>
+                            <a asp-controller="MyServices" asp-action="MyServices" class="fs-4 btn btn-link">My services</a>
                         </li>
                         <li class="nav-item mx-2">
-                            <a asp-controller="Profile" asp-action="ShowProfile" class="fs-4 btn btn-primary">Profile</a>
+                            <a asp-controller="Profile" asp-action="ShowProfile" class="fs-4 btn btn-link">Profile</a>
                         </li>
                     </ul>
                     @if (TempData["timeCredits"] != null)
