--- a/Views/Profile/EditProfile.cshtml
+++ b/Views/Profile/EditProfile.cshtml
@@ -1,73 +1,10 @@
 ﻿@model User
 
-<h2 class="my-5">@Model.LastName.ToUpper() @Model.FirstName[0].ToString().ToUpper()@Model.FirstName.Substring(1), You can now edit your profile</h2> <!--Add name in TempData["***"] to have it everywhere-->
+<h2 class="my-5">@Model.GetFullName(), You can now edit your profile</h2> <!--Add name in TempData["***"] to have it everywhere-->
 
 <form method="post" asp-action="EditProfile">
     <table class="table table-striped table-bordered table-hover">
-        <tr>
-            <th class="w-25"><label asp-for="FirstName"></label></th>
-            <td><input asp-for="FirstName" class="form-control"/></td>
-            <td class="w-50"><span asp-validation-for="FirstName" class="text-danger px-2"></span></td>
-        </tr>
-
-        <tr>
-            <th><label asp-for="LastName"></label></th>
-            <td><input asp-for="LastName" class="form-control" /></td>
-            <td><span asp-validation-for="LastName" class="text-danger px-2"></span></td>
-        </tr>
-
-        <tr>
-            <th><label asp-for="PhoneNumber"></label></th>
-            <td><input asp-for="PhoneNumber" class="form-control" /></td>
-            <td><span asp-validation-for="PhoneNumber" class="text-danger px-2"></span></td>
-        </tr>
-
-        <tr>
-            <th><label asp-for="StreetNumber"></label></th>
-            <td><input asp-for="StreetNumber" class="form-control" /></td>
-            <td><span asp-validation-for="StreetNumber" class="text-danger px-2"></span></td>
-        </tr>
-
-        <tr>
-            <th><label asp-for="StreetName"></label></th>
-            <td><input asp-for="StreetName" class="form-control" /></td>
-            <td><span asp-validation-for="StreetName" class="text-danger px-2"></span></td>
-        </tr>
-
-        <tr>
-            <th><label asp-for="PostCode"></label></th>
-            <td><input asp-for="PostCode" class="form-control" /></td>
-            <td><span asp-validation-for="PostCode" class="text-danger px-2"></span></td>
-        </tr>
-
-        <tr>
-            <th><label asp-for="City"></label></th>
-            <td><input asp-for="City" class="form-control" /></td>
-            <td><span asp-validation-for="City" class="text-danger px-2"></span></td>
-        </tr>
-
-        <tr>
-            <th><label asp-for="Email"></label></th>
-            <td><input asp-for="Email" class="form-control" /></td>
-            <td><span asp-validation-for="Email" class="text-danger px-2"></span></td>
-        </tr>
-
-        <tr>
-            <th><label asp-for="EditPassword"></label></th>
-            <td colspan="2"><input asp-for="EditPassword" class="form-check" style="cursor: pointer" /></td>
-        </tr>
-
-        <tr id="password">
-            <th><label asp-for="Password"></label></th>
-            <td><input asp-for="Password" class="form-control" /></td>
-            <td><span asp-validation-for="Password" class="text-danger px-2"></span></td>
-        </tr>
-
-        <tr id="confirmation-password">
-            <th><label asp-for="ConfirmPassword"></label></th>
-            <td><input asp-for="ConfirmPassword" class="form-control" /></td>
-            <td><span asp-validation-for="ConfirmPassword" class="text-danger px-2"></span></td>
-        </tr>
+        <partial name="_Partials/_EditUserDetails.cshtml" model="@Model"/>
     </table>
 
     <div class="d-flex gap-xl-5 justify-content-start">
