--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -19,16 +19,11 @@
 </div>
 
 <div class="d-flex flex-wrap align-items-center justify-content-center gap-5">
-    @foreach (ServiceProvided sp in Model)
-    {
-        <div class="card" style="width: 18rem;">
-            <img class="card-img-top fixed-size-img" src="@sp.Category.ImagePath" alt="Card image cap">
-            <div class="card-body">
-                <h5 class="card-title">@sp.Title</h5>
-                <p class="card-text">@sp.Description</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-        </div>
+    @{
+        foreach (ServiceProvided sp in Model)
+        {
+            <partial name="_ServiceProvidedCard" model="sp"/>
+        }
     }
 </div>
 
